# NQueensDistributed

./: CMakeLists.txt  README.md
src/: makefile  master.cpp  nqueens.cpp  nqueens_mul_thrd.cpp  nqueens_solver.cpp  nqueens_solver.h  slave.cpp  work_manager.cpp  work_manager.h
src/proto/: nqueens.pb.cc  nqueens.pb.h  nqueens.proto  proto_gen.sh
